# BEULXSM

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  ui.py
agent/core/: __init__.py  agent.py  executor.py  planner.py  verifier.py
agent/prompts/templates/: system_prompt.txt
api/: main.py
api/frontend/templates/: index.html
llm/providers/: base.py  gemini.py  groq.py  mistral.py  router.py
tests/: test_router.py
